tests/bad/map_literal_cannot_infer.oc
/// fail: Can't infer type of Map literal

def main() {
    let x = ${}
}